--- a/app/src/main/res/layout/usercollection_fragment.xml
+++ b/app/src/main/res/layout/usercollection_fragment.xml
@@ -28,7 +28,8 @@
         android:gravity="center"
         android:padding="8dp"
         android:text="@string/network_issue"
-        app:layout_constraintTop_toBottomOf="@+id/tlb_list_activity" />
+        app:layout_constraintTop_toBottomOf="@+id/tlb_list_activity"
+        android:visibility= "gone"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rec_list_activity"
